<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/Width.Dialog"
    android:orientation="vertical">

    <TextView
        style="@style/TextView.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/Margin.Standard"
        android:text="@string/AddEvent.Label" />

    <EditText
        android:id="@id/add_event_title"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hint.Title"
        android:textColorHint="@color/md_black_1000"
        />

    <EditText
        android:id="@id/add_event_description"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/md_black_1000"

        android:hint="@string/Hint.Description" />

    <EditText
        android:id="@id/add_event_location"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/md_black_1000"

        android:hint="@string/Hint.Location" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="*" >

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/appt_start_label"
                    style="?android:attr/textAppearanceSmall"

                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@id/set_from_date"
                    style="?android:attr/textAppearanceMedium"

                    />
            </TableRow>
        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@id/from_date"
                android:text="@string/from_date"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id="@id/from_time"
                android:text="@string/from_time"
                style="?android:attr/borderlessButtonStyle"

                />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@color/divider_color" />
        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/app_end_label"
                style="?android:attr/textAppearanceSmall"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@id/set_to_date"
                style="?android:attr/textAppearanceMedium"

                />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@id/to_date"
                android:text="@string/to_date"
                style="?android:attr/borderlessButtonStyle"
                />
            <Button
                android:id="@id/to_time"
                android:text="@string/to_time"
                style="?android:attr/borderlessButtonStyle"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>
